# advent-of-code-2024

./: .editorconfig  Cargo.toml
benches/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
day00/: Cargo.toml
day00/benches/: benchmarks.rs
day00/src/: lib.rs
day01/: Cargo.toml
day01/benches/: benchmarks.rs
day01/src/: lib.rs
day02/: Cargo.toml
day02/benches/: benchmarks.rs
day02/src/: lib.rs
day03/: Cargo.toml
day03/benches/: benchmarks.rs
day03/src/: lib.rs
day04/: Cargo.toml
day04/benches/: benchmarks.rs
day04/src/: lib.rs
day05/: Cargo.toml
day05/benches/: benchmarks.rs
day05/src/: lib.rs
day06/: Cargo.toml
day06/benches/: benchmarks.rs
day06/src/: lib.rs
day07/: Cargo.toml
day07/benches/: benchmarks.rs
day07/src/: lib.rs
day08/: Cargo.toml
day08/benches/: benchmarks.rs
day08/src/: lib.rs
day09/: Cargo.toml
day09/benches/: benchmarks.rs
day09/src/: lib.rs
day10/: Cargo.toml
day10/benches/: benchmarks.rs
day10/src/: lib.rs
day11/: Cargo.toml
day11/benches/: benchmarks.rs
day11/src/: lib.rs
day12/: Cargo.toml
day12/benches/: benchmarks.rs
day12/src/: lib.rs
grid/: Cargo.toml
grid/src/: lib.rs
input/: Cargo.toml
input/src/: lib.rs
src/: day01.rs  day03.rs  day04.rs  day05.rs  lib.rs
tmp/: Cargo.toml
tmp/src/: day00.rs  day02.rs
