[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
nom = "7.1.3"
nom-supreme = "0.8.0"

[dev-dependencies]
divan = "0.1.4"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bench]]
name = "day00"
harness = false

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false
