[workspace]
resolver = "2"

members = [ "day00", "day01", "day02", "day03", "day04", "day05",
    "day06", "day07", "day08", "day09", "input",
]

[workspace.dependencies]
divan = "0.1.4"
glam = "0.29.2"
itertools = "0.13.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
