[package]
name = "day03"
version = "0.1.0"
edition = "2021"

[dependencies]
input = { path = "../input" }
itertools.workspace = true
nom.workspace = true
nom-supreme.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "day03-bench"
path = "benches/benchmarks.rs"
harness = false
